Revert large screen fix, not responsive and affect other dimensions

--- a/sass/global.sass
+++ b/sass/global.sass
@@ -215,8 +215,3 @@ input[type=file]
       position: relative
   #relations
     margin-top: 17px
-
-@media (min-width: 1200px)
-  #topics-container
-    &.affix
-      width: calc(15% - 6.8px)
